removed unused JVM args